Prevent context menu from showing on mobile

--- a/src/components/ui/GameBoy/GameBoy.css
+++ b/src/components/ui/GameBoy/GameBoy.css
@@ -10,5 +10,10 @@
 .gameboy__shell {
   max-width: 100vw;
   max-height: 100vh;
-  border: 1px solid black;
+
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-touch-callout: none;
 }
